src/test/deca/context/valid/improvided/decl_class.deca
// Description :
// 	Declaration d'une classe A
// Resultats : 
// 	ok 

class A {

}

