src/test/deca/context/invalid/improvided/class_exists.deca
// Description:
//   Double déclaration d'une classe
//
// Résultats:
//   Erreur Contextuelle
//   Ligne 10: The class already exists.

class A{
}
class A{
}
